# kotiki_home_www

./: README.md  manage.py  pyproject.toml
auths/: apps.py
kt_home/: asgi.py  settings.py  system_settings.py  urls.py  views.py  wsgi.py
res/logo/: logo.xcf
templates/: base.html  index.html
